--- a/scss/_compatibility.scss
+++ b/scss/_compatibility.scss
@@ -2,6 +2,9 @@
 
 .text-center {
     text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .text-left {
