--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -1045,7 +1045,7 @@ header#page-header
 #page-header {
     padding-top: 4em;
     padding-bottom: 0.5em;
-    @media (max-width: 620px) {
+    @media (max-width: 720px) {
         padding-top: 7em;
     }
 }
